# prompt-drift-watch

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  highstar.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: baseline_agents.md  baseline_prompt.md  changed_agents.md  changed_prompt.md  rules.json
releases/: v0.1.0.md  v0.2.0.md  v0.2.1.md
src/prompt_drift_watch/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
