[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-drift-watch"
version = "0.2.0"
description = "Detect risky changes in AI prompt and agent instruction files before they ship."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "alexzhu0" }]
keywords = ["ai-tools", "prompt-engineering", "agents", "llmops", "cli", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
prompt-drift-watch = "prompt_drift_watch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
